k8s/v1.36.2/clusters/dev/kubernetes-dashboard/kubernetes-objects/virtualServiceKubernetesDashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard-virtual-service
  namespace: kubernetes-dashboard
spec:
  hosts:
    - dashboard.maifuj.com
  gateways:
    - istio-ingress/gateway-https
  tls:
    - match:
        - port: 443
          sniHosts:
            - dashboard.maifuj.com
      route:
        - destination:
            host: kubernetes-dashboard-dev-kong-proxy.kubernetes-dashboard.svc.cluster.local
            port:
              number: 443
